# arbor

./: go.mod  go.sum  pyproject.toml  xxl.go
cmd/hdp/: main.go
cmd/hdp/cmd/: root.go
cmd/hdp/cmd/serv/: config.go  serv.go
db/: db.go
docker/: docker-compose-infra-dev.yml
docker/data/apollo/: supergraph.graphql
docker/新ERP数据字典/: README.md  table_analysis.json  术语缩写规范.md
docker/新ERP数据字典/PostgreSQL/: 00_init_all.sh  01_master_data.sql  02_investment.sql  03_account.sql  04_property.sql  05_operation.sql  06_system.sql  README.md  表清单.md
fe/: README.md
hdp/: app.go  db.go  generate.go  go.mod  go.sum  sql.go  store.go  tpl.go
hdp/cmd/hdp/: main.go
hdp/cmd/hdp/cmd/: param.go  run.go
hdp/ent/: client.go  ent.go  entql.go  mutation.go  runtime.go  upload.go  upload_create.go  upload_delete.go  upload_query.go  upload_update.go
hdp/ent/enttest/: enttest.go
hdp/ent/hook/: hook.go
hdp/ent/privacy/: privacy.go
hdp/ent/runtime/: runtime.go
hdp/ent/upload/: where.go
sales/: config.py  go.mod  go.sum  main.py
sales/cmd/sales/: main.go
sales/cmd/sales/cmd/: root.go  run.go
sales/gql/: gqlgen.yml
sales/gql/scalar/: decimal.go
sales/gql/schema/: base.graphqls  inputs.mutation.graphqls  inputs.query.graphqls
sales/graphql/: mutations.py
sales/orm/: generate.go  pg.go
sales/orm/schema/: inputs.go
sales/orm/schema/internal/x/: utils.go
xjob/: config.py  main.py
xjob/aibee/: __init__.py  aibee.py  db.py  job.py
