[project]
name = "arbor"
version = "0.1.0"
description = ""
authors = [
    {name = "it512",email = "it512@msn.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "fastapi[standard] (>=0.118.0,<0.119.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "psycopg[binary,pool] (>=3.2.12,<4.0.0)",
    "strawberry-graphql[cli,fastapi] (>=0.284.1,<0.285.0)",
    "pyxxl>=0.4.4",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[dependency-groups]
dev = [
    "ruff (>=0.13.1,<0.14.0)",
    "autoimport (>=1.6.1,<2.0.0)",
    "pylsp-rope (>=0.1.17,<0.2.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
]

[tool.ruff]
fix = true
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.format]  # https://docs.astral.sh/ruff/settings/#format
quote-style = "double" 

[tool.mypy]
plugins = ["strawberry.ext.mypy_plugin"]
